--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="#">
                     <img src="./images/icons/logo.png" alt="" width="40" height="50" class="d-inline-block align-text-top">
-                    <span class="ms-2">Idea</span>
+                    <span class="ms-2">ROY</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">
-                                <img src="./images/icons/profile.png" alt="" width="51" height="51" class="d-inline-block align-text-top">
+                                <img src="./images/icons/profile-2.jpg" alt="" width="51" height="51" class="d-inline-block align-text-top rounded-circle">
                             </a>
                         </li>
                     </ul>
